--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -254,7 +254,7 @@ body.admin-bar #nav .nav-flyout {
 		left: 0;
 		right: 0;
 		background: #fff;
-		z-index: 200;
+		z-index: 100;
 		
 	}
 	
