--- a/css/sass/_mediaqueries.scss
+++ b/css/sass/_mediaqueries.scss
@@ -37,7 +37,7 @@ Media Queries for Theme FAU-Einrichtungen
 	    left: 0;
 	    right: 0;
 	    background: #fff;
-	    z-index: 200;
+	    z-index: 100;
 	}
 	&.nav-scrolled #header {
 		 @include box-shadow(0 1px 3px rgba(0,0,0,0.3));	
@@ -78,7 +78,7 @@ Media Queries for Theme FAU-Einrichtungen
 		left: 0;
 		right: 0;
 		background: #fff;
-		z-index: 200;
+		z-index: 100;
 	    }
 	    &.nav-scrolled #header {
 		 @include box-shadow(0 1px 3px rgba(0,0,0,0.3));	
@@ -115,7 +115,7 @@ Media Queries for Theme FAU-Einrichtungen
 		left: 0;
 		right: 0;
 		background: #fff;
-		z-index: 200;
+		z-index: 100;
 	    }
 	    #hero {
 		margin-top: 171px;
@@ -393,7 +393,7 @@ Media Queries for Theme FAU-Einrichtungen
 	    #header {
 		    padding: 0;
 		    // position: relative;
-		    z-index: 200;
+		    z-index: 100;
 		    background: #fff;
 		    top: 0;
 		    left: 0;
@@ -497,7 +497,7 @@ Media Queries for Theme FAU-Einrichtungen
 		left: 0;
 		right: 0;
 		background: #fff;
-		z-index: 200;
+		z-index: 100;
 		
 		// @include box-shadow(0 1px 3px rgba(0,0,0,0.3));	
 	    }
